// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Cordial's upsertContact destination action: all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "2AUBtz6WjM5lHBm",
  },
  "userIdentities": Object {
    "testType": "2AUBtz6WjM5lHBm",
  },
}
`;

exports[`Testing snapshot for Cordial's upsertContact destination action: required fields 1`] = `
Object {
  "userIdentities": Object {
    "testType": "2AUBtz6WjM5lHBm",
  },
}
`;
